# rasterizer

./: .gitignore  CMakeLists.txt  README.md  next.config.mjs  nodemon.json  package-lock.json  package.json  test.html
app/: layout.tsx  page.tsx
components/: main.tsx
lib/: CMakeCache.txt  CTestTestfile.cmake  cpp.d.ts  cpp.js  try_test  try_test[1]_include.cmake  try_test[1]_tests.cmake
src/: CMakeLists.txt  enums.hpp  instance.cpp  instance.hpp  main.cpp  transform.cpp  transform.hpp
src/instances/: camera.cpp  camera.hpp  instance.cpp  instance.hpp  light.cpp  light.hpp  rotation.cpp  rotation.hpp  transform.cpp  transform.hpp
src/math/: matrix.cpp  matrix.hpp  plane.cpp  plane.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp  utils.cpp  utils.hpp  vec.cpp  vec.hpp
src/meshes/: cube.cpp  cube.hpp  custom.cpp  custom.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  triangle.cpp  triangle.hpp
src/models/: cube.cpp  cube.hpp  triangle.cpp
src/render/: canvas.cpp  canvas.hpp  material.cpp  material.hpp  rasterizer.cpp  rasterizer.hpp  rgba.cpp  rgba.hpp  viewport.hpp
tests/: CMakeLists.txt  test_cube.cpp  test_instance.cpp  test_matrix.cpp  test_plane.cpp  test_rasterizer.cpp  test_rgba.cpp  test_triangle.cpp  test_utils.cpp  test_vec.cpp
utils/: engine.ts  type.ts
utils/hooks/: useCpp.tsx
